# stunning-waffle

./: .editorconfig  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  constraints.txt  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  db.py  dependencies.py  launcher.py  logging.py  main.py  middleware.py  models.py  redis_store.py  schemas.py  signaling.py  targets.py
apps/api/app/api/: bootstrap.py
apps/api/app/api/routes/: automation.py  health.py  rtc.py  sessions.py  signaling.py
apps/api/app/services/: sessions.py  sweeper.py
apps/api/tests/: conftest.py  test_automation.py  test_health.py  test_launcher.py  test_rtc.py  test_sessions.py  test_signaling.py  test_sweeper.py  test_targets.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/session-agent/: README.md  constraints.txt  pyproject.toml
apps/session-agent/session_agent/: __init__.py  browser.py  capture.py  config.py  input.py  main.py  screenshot.py
apps/session-agent/tests/: test_browser.py  test_capture.py
docs/: api.md  architecture.md  browserling-gap-analysis.md  threat-model.md
docs/runbooks/: local-dev.md  production-single-host.md  release-refresh.md
images/brave/: Dockerfile
images/chromium/: Dockerfile  README.md
images/edge/: Dockerfile
images/firefox/: Dockerfile  README.md
images/kali-xfce/: Dockerfile
images/ubuntu-xfce/: Dockerfile
images/vivaldi/: Dockerfile
infra/compose/: .env.example  docker-compose.dev.yml  docker-compose.yml
infra/coturn/: turnserver.conf  users.txt.example
infra/haproxy/: haproxy.cfg
infra/scripts/: dependency-audit.ps1  (+15 more)
(+6 files in other folders)
