[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "foss-browserlab-api"
version = "0.1.0"
description = "FastAPI control plane scaffold for foss-browserlab"
requires-python = ">=3.12"
dependencies = [
  "docker>=7.1.0,<8.0.0",
  "fastapi>=0.115.5,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "redis>=5.2.1,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "uvicorn[standard]>=0.32.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.26.2,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.8.4,<1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
